<resources>
    <string name="app_name">PDD</string>
    <string name="Hello">Добро пожаловать</string>
    <string name="Button1">Начать</string>
    <string name="Button2">Термины</string>
    <string name="Button3">Знаки</string>
    <string name="Button4">Документы</string>
    <string name="Button5">Образец заявления</string>
    <string name="Button6">Образец свидетельства</string>
    <string name="Button7">Образец медицинского заключения</string>
    <string name="Rules1">Настоящие Правила дорожного движения 2024 года устанавливают единый порядок дорожного движения на всей территории Российской Федерации(РФ). Другие нормативные акты, касающиеся дорожного движения, должны основываться на требованиях Правил и не противоречить им.</string>
    <string name="Rules2">В Правилах используются следующие основные понятия и термины:</string>
    <string name="Rules5">"Автомагистраль" - дорога имеющая для каждого направления движения проезжие части, отделенные друг от друга разделительной полосой (а при ее отсутствии - дорожным ограждением), без пересечений в одном уровне с другими дорогами, железнодорожными или трамвайными путями, пешеходными или велосипедными дорожками.</string>
    <string name="Rules3">"Автопоезд" - механическое транспортное средство, сцепленное с прицепом (прицепами).</string>
    <string name="Rules4">"Велосипед" - транспортное средство, кроме инвалидных колясок, которое имеет по крайней мере два колеса и приводится в движение как правило мускульной энергией лиц, находящихся на этом транспортном средстве, при помощи педалей или рукояток, и может также иметь электродвигатель номинальной максимальной мощностью в режиме длительной нагрузки, не превышающей 0,25 кВт, автоматически отключающийся на скорости более 25 км/ч.</string>
    <string name="Rules6">"Велосипедная дорожка" — конструктивно отделенный от проезжей части и тротуара элемент дороги (либо отдельная дорога), предназначенный для движения велосипедистов и лиц, использующих для передвижения средства индивидуальной мобильности.</string>
    <string name="Rules7">"Велосипедная зона" — территория, предназначенная для движения велосипедистов и лиц, использующих для передвижения средства индивидуальной мобильности.</string>
    <string name="Rules8">"Водитель" — лицо, управляющее каким-либо транспортным средством, погонщик, ведущий по дороге вьючных, верховых животных или стадо. К водителю приравнивается обучающий вождению.</string>
    <string name="Rules9">"Вынужденная остановка" — прекращение движения транспортного средства из-за его технической неисправности или опасности, создаваемой перевозимым грузом, состоянием водителя (пассажира) или появлением препятствия на дороге.</string>
    <string name="Rules10">"Гибридный автомобиль" — транспортное средство, имеющее не менее 2 различных преобразователей энергии (двигателей) и 2 различных (бортовых) систем аккумулирования энергии для целей приведения в движение транспортного средства.</string>
    <string name="sign1">Знак Железнодорожный переезд со шлагбаумом</string>
    <string name="sign2">Знак Железнодорожный переезд без шлагбаума</string>
    <string name="sign3">Знак Однопутная железная дорога</string>
    <string name="sign4">Знак Многопутная железная дорога</string>
    <string name="sign5">Знак Приближение к железнодорожному переезду</string>
    <string name="sign6">Знак Пересечение с трамвайной линией</string>
    <string name="sign7">Знак Пересечение равнозначных дорог</string>
    <string name="sign8">Знак Пересечение с круговым движением</string>
    <string name="sign9">Знак Cветофорное регулирование</string>
    <string name="sign10">Знак Разводной мост</string>
    <string name="sign11">Знак Выезд на набережную</string>
    <string name="document1">Общие перечень документов для получения водительских прав:</string>
    <string name="document2">Перечень документов на получение водительского удостоверения небольшой:</string>
    <string name="document3">паспорт;</string>
    <string name="document4">заявление на выдачу водительского удостоверения;</string>
    <string name="document8">Образец заявления:</string>
    <string name="document5">свидетельство об окончании автошколы;</string>
    <string name="document6">квитанция об оплате госпошлины;</string>
    <string name="document7">медицинское заключение (форма N 083/У-89).</string>
    <string name="action_settings">Settings</string>
    <string name="action_cat_male">Кот</string>
    <string name="action_cat_female">Кошка</string>
    <string name="action_kitten">Котёнок</string>
</resources>