<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_639781515_343_catherineasquithgallery_com_p_rozovo_sirenevii_fon_gradient_455"
    tools:context=".RulesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules7"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules8"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules9"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/Rules10"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>