<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_639781515_343_catherineasquithgallery_com_p_rozovo_sirenevii_fon_gradient_455"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"

                app:srcCompat="@drawable/web_terms" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/white"
                android:text="@string/Button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/white"
                android:text="@string/Button3" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/_80a65f32b4c2cc2b14935b99b5008ee" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/dokumentacia" />

            <Button
                android:id="@+id/button5"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/white"
                android:text="@string/Button4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <WebView
                android:id="@+id/WebView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>